@@ -1,3 +1,4 @@
+* 13/06/2012   (**Important )   Process of reducing Case statement in Block, SeqBlock and GenBlock.
 * 12/06/2012   (**Important )   Need serious test for Elab_empty and Elab_Const_If reduction in Block, SeqBlock and GenBlock.
 * 11/06/2012   (**Normal    )   + and - for Numbers with x or z generate asserion failures as not supported yet.
 * 11/06/2012   (**Normal    )   The != operator for netlist::Number generates wrong results when x or z exists. eg: "x1" != "0" results false.
