@@ -385,7 +385,7 @@ bool netlist::Number::check_valuable() {
   return true;
 }
 
-static std::string trim_zeros(const std::string& str){
+std::string netlist::Number::trim_zeros(const std::string& str){
   std::size_t pos = str.find_first_not_of("0");
   if(pos == std::string::npos) {
     return "0";
@@ -403,7 +403,7 @@ Number netlist::operator- (const Number& lhs, const Number& rhs) {
 }
 
 bool netlist::operator== (const Number& lhs, const Number& rhs) {
-  if(trim_zeros(lhs.get_txt_value()) == trim_zeros(rhs.get_txt_value()) && 
+  if(Number::trim_zeros(lhs.get_txt_value()) == Number::trim_zeros(rhs.get_txt_value()) && 
      string::npos == lhs.get_txt_value().find('x') &&
      string::npos == lhs.get_txt_value().find('z'))
     return true;
@@ -413,7 +413,7 @@ bool netlist::operator== (const Number& lhs, const Number& rhs) {
 
 bool netlist::operator!= (const Number& lhs, const Number& rhs) {
   assert(lhs.is_valuable() && rhs.is_valuable()); // the result may be wrong when x or z exists
-  if(trim_zeros(lhs.get_txt_value()) != trim_zeros(rhs.get_txt_value()) && 
+  if(Number::trim_zeros(lhs.get_txt_value()) != Number::trim_zeros(rhs.get_txt_value()) && 
      string::npos == lhs.get_txt_value().find('x') &&
      string::npos == lhs.get_txt_value().find('z'))
     return true;
@@ -422,7 +422,7 @@ bool netlist::operator!= (const Number& lhs, const Number& rhs) {
 }
 
 bool netlist::case_equal(const Number& lhs, const Number& rhs) {
-  return (trim_zeros(lhs.get_txt_value()) == trim_zeros(rhs.get_txt_value()));
+  return (Number::trim_zeros(lhs.get_txt_value()) == Number::trim_zeros(rhs.get_txt_value()));
 }  
 
 Number netlist::operator<< (const Number& lhs, int rhs) {
