@@ -56,6 +56,20 @@ ERR_DEFINE("ELAB-BLOCK-1",
            EError,   0, 
            "illegal place for a block.");
 
+ERR_DEFINE("ELAB-CASE-0", 
+           EError,   0, 
+           "illegal place for a case statement.");
+
+// case items after a default case
+ERR_DEFINE("ELAB-CASE-1", 
+           EWarning,   0, 
+           "the cases after a default case will be removed.");
+
+// case items after a default case
+ERR_DEFINE("ELAB-CASE-2", 
+           EWarning,   0, 
+           "duplicated case item will be removed.");
+
 // non-constant concationation parameter
 ERR_DEFINE("ELAB-EXPRESSION-0",
            EError,   1,
